--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Shanghai, China"
   employer         : "ShanghaiTech University"
   uri              : # URL
-  email            : "zhoushch@shanghaitech.edu.cn" 
+  email            : "zhoushch@shanghaitech.edu.cn", "zhoushch2003@gmail.com"
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -48,7 +48,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
