--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@
 locale                   : "en-US"
 title                    : "Shouchen Zhou"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
+name                     : &name "Shouchen Zhou"
+description              : &description "An undergraduate student at ShanghaiTech University"
 url                      : https://zsc2003.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "zsc2003/zsc2003.github.io"
@@ -28,7 +28,7 @@ author:
   location         : "Shanghai, China"
   employer         : "ShanghaiTech University"
   uri              : # URL
-  email            : "zhoushch@shanghaitech.edu.cn", "zhoushch2003@gmail.com"
+  email            : "zhoushch@shanghaitech.edu.cn"
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
