--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,12 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Shouchen Zhou"
-  pronouns         : "he/his"  
-  bio              : "ShanghaiTech University"
-  location         : "Shanghai, China"
-  employer         : "ShanghaiTech University"
+  pronouns         : "he/his"
+  bio              : "Tsinghua University"
+  location         : "Beijing, China"
+  employer         : "Tsinghua University"
   uri              : # URL
-  email            : "zhoushch@shanghaitech.edu.cn"
+  email            : "zhousc25@mails.tsinghua.edu.cn"
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -44,8 +44,8 @@ author:
   codepen          : # Username
   dribbble         : # Username
   github           : "zsc2003"
-  kaggle           : # Username  
-  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
+  kaggle           : # Username
+  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")
 
   # Social media
   bluesky          : # "bsky.app" # Replace this with you Bluesky username
@@ -78,7 +78,7 @@ publication_category:
   books:
     title: 'Books'
   manuscripts:
-    title: 'Journal Articles'    
+    title: 'Journal Articles'
   conferences:
     title: 'Conference Papers'
 
