--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # This config file is meant for settings that affect your entire site, values
 # which you are expected to set up once and rarely need to edit after that.
 # For technical reasons, this file is *NOT* reloaded automatically when you use
-# `jekyll serve -l -H localhost`. If you change this file, please restart the 
+# `jekyll serve -l -H localhost`. If you change this file, please restart the
 # server process.
 
 # Basic Site Settings
@@ -32,9 +32,9 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : # $"https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : $"https://scholar.google.com/citations?user=6D6uyxAAAAAJ"
   impactstory      : # URL
-  orcid            : # $"http://orcid.org/yourorcidurl"
+  orcid            : $"https://orcid.org/0009-0005-9396-0055"
   semantic         : # URL
   pubmed           : # $"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
