--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Shouchen Zhou"
 title_separator          : "-"
 name                     : &name "Shouchen Zhou"
-description              : &description "An undergraduate student at ShanghaiTech University"
+description              : &description "A master's student at Tsinghua University"
 url                      : https://zsc2003.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "zsc2003/zsc2003.github.io"
@@ -24,9 +24,9 @@ author:
   avatar           : "profile.png"
   name             : "Shouchen Zhou"
   pronouns         : "he/his"
-  bio              : "Tsinghua University"
+  bio              : "(Testing~) I am currently a master's student at Tsinghua University and used to be an undergraduate at ShanghaiTech University."
   location         : "Beijing, China"
-  employer         : "Tsinghua University"
+  employer         : # "Tsinghua University"
   uri              : # URL
   email            : "zhousc25@mails.tsinghua.edu.cn"
 
