--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ author:
   email            : "zhousc25@mails.tsinghua.edu.cn"
 
   github           : "zsc2003"
-  googlescholar    : $"https://scholar.google.com/citations?user=6D6uyxAAAAAJ"
-  orcid            : $"https://orcid.org/0009-0005-9396-0055"
+  googlescholar    : "https://scholar.google.com/citations?user=6D6uyxAAAAAJ"
+  orcid            : "https://orcid.org/0009-0005-9396-0055"
 
 
   # Academic websites
