--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Shouchen Zhou"
   pronouns         : "he/his"
-  bio              : "(Testing~22) I am currently a master's student at Tsinghua University and used to be an undergraduate at ShanghaiTech University."
+  bio              : "I am currently a master's student at Tsinghua University and used to be an undergraduate at ShanghaiTech University."
   location         : "Beijing, China"
   employer         : # "Tsinghua University"
   uri              : # URL
